--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,11 @@ defusedxml==0.7.1
 dill==0.3.4
 distlib==0.3.4
 Django==4.0.4
+django-cors-headers==3.12.0
 django-filter==21.1
 djangorestframework==3.13.1
 docutils==0.18.1
+drf-writable-nested==0.6.3
 entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
